[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.1"
name = "finestflow"
authors = [{ name = "trducng", email = "trungduc1992@gmail.com" }]
description = "Manage your prompts"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8", "mypy", "isort", "pre-commit"]

[tool.setuptools.packages.find]
include = ["finestflow", "finestflow.*"]
