[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.4.0"
name = "theflow"
authors = [{ name = "trducng", email = "trungduc1992@gmail.com" }]
description = "A simple framework to build and run flows"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 2 - Pre-Alpha"
]
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["coverage", "pytest", "pytest-cov", "black", "flake8", "mypy", "isort", "pre-commit", "notebook", "ipython", "build", "twine", "papermill"]

[project.urls]
Homepage = "https://github.com/trducng/theflow"
Repository = "https://github.com/trducng/theflow"

[tool.setuptools.packages.find]
include = ["theflow", "theflow.*"]

[tool.isort]
profile = "black"
